app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shop-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
  template:
    metadata:
      labels:
        app: shop
    spec:
      containers:
      - name: shop
        image: hashicorp/http-echo
        args:
          - "-text=Welcome to SHOP!"
        ports:
          - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: shop-service
spec:
  selector:
    app: shop
  ports:
    - port: 80
      targetPort: 5678
