ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lacedtribe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lacedtribe.store
        - lacedtribe.store
      secretName: lacedtribe-tls
  rules:
    - host: shop.lacedtribe.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shop-service
                port:
                  number: 80
    - host: blog.lacedtribe.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog-service
                port:
                  number: 80
